# src_football

./: .env  .env-example  .gitignore  README.md  converter.py  docker-compose.yml  pyproject.toml  task_2.py
dbt_src_football/: .user.yml  dbt_project.yml  profiles.yml
dbt_src_football/models/clean/: clean.yml  clean_src__matches.sql  clean_src__matches_event_data.sql  clean_src__matches_players.sql
dbt_src_football/models/marts/dim/: dim.yml  dim_src__matches_data_points.sql  dim_src__matches_participation_data.sql
dbt_src_football/models/marts/fct/: fct.yml  fct_src__matches_event_data.sql
dbt_src_football/models/staging/: staging.yml  stg_src__matches.sql  stg_src__matches_event_data.sql
