[tool.poetry]
name = "src-football"
version = "0.1.0"
description = ""
authors = ["agustinavarro"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
dbt-core = "1.7.1"
dbt-postgres = "1.7.1"
dbt-duckdb = "^1.7.0"
pandas = "~1.3.5"
numpy = "^1.26.2"
pyspark = "^3.5.0"
pyarrow = "^14.0.1"
geopy = "^2.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
